--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Redirecting...</title>
     <script>
         // Redirect to the specified URL
-        window.location.href = "http://103.253.213.47:3000/";
+        window.location.href = "https://hemodinamik.berkompeten.com/";
     </script>
 </head>
 <body>
